--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Gabriel's site provides information about his web development journey.">
-    <title>Gabriel's Site</title>
+    <title>Geb's Site</title>
 </head>
 <body>
     <table cellspacing="10">
